# IA-para-desarrolladores

./: .env.sample  .gitignore  00_SETUP.md  01_Regresión.md  02_Entrenamiento.md  03_Clasificación.md  04_Deep Learning.md  05_LLM.md  06_Primeros pasos con LLM.md  07_Hola Mundo LLM.md  08_El rol assistant.md  09_Imagen a texto con LLM.md  10_RAG.md  11_Gradio.md  12_Creación de Tools.md  14_RAG con Hugging Face.md  15_LangChain.md  17_Sistema de moderación con LangChain.md  18_Uso de Agentes con LangChain.md  19_Uso de Tools con la API de Google Gemini.md  20_Uso de la tool GoogleSearch.md  21_Agentes con OpenAI SDK .md  22_LangGraph.md  23_LangGraph Project (i).md  24_LangGraph Project(ii).md  25_MCP.md  README.md  pyproject.toml
ipynb/: 00_SETUP.ipynb  01_Regresión.ipynb  02_Entrenamiento.ipynb  03_Clasificación.ipynb  04_Deep Learning.ipynb  05_LLM.ipynb  06_Primeros pasos con LLM.ipynb  07_Hola Mundo LLM.ipynb  08_El rol assistant.ipynb  11_Gradio.ipynb  12_Creación de Tools.ipynb  13_Hugging Face.ipynb  13_Hugging Face.md  14_RAG con Hugging Face.ipynb  15_LangChain.ipynb  17_Sistema de moderación con LangChain.ipynb  18_Uso de Agentes con LangChain.ipynb  19_Uso de Tools con la API de Google Gemini.ipynb  20_Uso de la tool GoogleSearch.ipynb  21_Agentes con OpenAI SDK .ipynb  22_LangGraph.ipynb  23_LangGraph Project (i).ipynb  24_LangGraph Project(ii).ipynb  25_MCP.ipynb  26_ADK.ipynb  27_A2A.ipynb  prompt.json  prompt.yaml
pdfs/: recipe_info.json
py/: 00_SETUP.py  01_Regresión.py  02_Entrenamiento.py  03_Clasificación.py  04_Deep Learning.py  05_LLM.py  06_Primeros pasos con LLM.py  07_Hola Mundo LLM.py  (+19 more)
(+86 files in other folders)
